# cmdreg

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_zh.md
.github/workflows/: ci.yml  publish.yml
cmdreg/: Cargo.toml
cmdreg-macros/: Cargo.toml
cmdreg-macros/src/: lib.rs
cmdreg/src/: callback.rs  command_map.rs  context.rs  dispatch_async.rs  dispatch_sync.rs  extractor.rs  handler.rs  handler_async.rs  lib.rs  registry.rs  response.rs
cmdreg/tests/: integration_test.rs  macro_test.rs
